added batch computation scripts

--- a/batch_compute_bound.ipynb
+++ b/batch_compute_bound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +48,11 @@
     "from bounds.bounds import *\n",
     "from util.kl import *\n",
     "from util.misc import *\n",
+    "from util.batch import *\n",
     "from results.plotting import *\n",
     "\n",
     "# Hyper-parameters\n",
-    "TASK = 2\n",
+    "task = 2\n",
     "seed = 69105\n",
     "batch_size = 128\n",
     "num_classes = 10\n",
@@ -60,6 +61,7 @@
     "make_plots = False\n",
     "delta=0.05 ## what would this be?   \n",
     "binary=True\n",
+    "bound='germain'\n",
     "epsilons=[0.01]\n",
     "alphas=[0.1]#0,0.3]\n",
     "sigmas=[[3,2],[3,3]]\n",
@@ -68,121 +70,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3', ',', '3']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list('3,3')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load and structure data"
+    "# Alvis params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project = 'SNIC2021-7-82'\n",
+    "username = 'frejohk'\n",
+    "job = 'batch_bound_single.sbatch'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean, variance 0.36348352 70.18035\n",
-      "---------------Load MNIST----------------\n",
-      "Training set (60000, 32, 32, 3) (60000, 10)\n",
-      "Test set (10000, 32, 32, 3) (10000, 10)\n",
-      "\n",
-      "\n",
-      "mean, variance 1.1809415 74.36859\n",
-      "---------------Load MNIST-M----------------\n",
-      "Training set (60000, 32, 32, 3) (60000, 10)\n",
-      "Test set (10000, 32, 32, 3) (10000, 10)\n",
-      "[[10.986111, 5.0, 2.999428, 1.99958, 1.399789, 1.0, 0.71435696, 0.5, 0.33346358, 0.20003448], [0.09088036, 0.19987813, 0.33326975, 0.5, 0.7143216, 1.0, 1.4001397, 2.0, 3.0, 5.0025883]]\n"
+      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
+      "            103465     alvis     bash  frejohk  R    2:53:08      1 alvis1-08 \r\n"
      ]
     }
    ],
    "source": [
-    "x_source, y_source, x_target, y_target = load_task(TASK)"
+    "!squeue -u $username"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/usr/bin/bash\r\n",
+      "\r\n",
+      "#SBATCH -t 1-00:00:00\r\n",
+      "#SBATCH -N 1 --gpus-per-node=V100:1\r\n",
+      "#SBATCH -p alvis \r\n",
+      "\r\n",
+      "if [ -z \"$task\" ]\r\n",
+      "then\r\n",
+      "    task=2\r\n",
+      "fi\r\n",
+      "if [ -z \"$seed\" ]\r\n",
+      "then \r\n",
+      "    seed=69105\r\n",
+      "fi\r\n",
+      "if [ -z \"$alpha\" ]\r\n",
+      "then \r\n",
+      "    alpha=0.0\r\n",
+      "fi\r\n",
+      "if [ -z \"$sigma\" ]\r\n",
+      "then \r\n",
+      "    sigma='3,3'\r\n",
+      "fi\r\n",
+      "if [ -z \"$epsilon\" ]\r\n",
+      "then \r\n",
+      "    epsilon=0.01\r\n",
+      "fi\r\n",
+      "if [ -z \"$delta\" ]\r\n",
+      "then \r\n",
+      "    delta=0.05\r\n",
+      "fi\r\n",
+      "if [ -z \"$binary\" ]\r\n",
+      "then \r\n",
+      "    binary=0\r\n",
+      "fi\r\n",
+      "if [ -z \"$nclassifiers\" ]\r\n",
+      "then \r\n",
+      "    nclassifiers=2\r\n",
+      "fi\r\n",
+      "if [ -z \"$bound\" ]\r\n",
+      "then \r\n",
+      "    bound='germain'\r\n",
+      "fi\r\n",
+      "if [ -z \"$prior\" ]\r\n",
+      "then \r\n",
+      "    prior=''\r\n",
+      "fi\r\n",
+      "if [ -z \"$posterior\" ]\r\n",
+      "then \r\n",
+      "    posterior=''\r\n",
+      "fi\r\n",
+      "\r\n",
+      ". load_modules.sh\r\n",
+      "\r\n",
+      "python batch_bound_single.py -t $task -r $seed -a $alpha -s $sigma -e $epsilon -d $delta -b $binary -n $nclassifiers -B $bound -p $prior -P $posterior"
+     ]
+    }
+   ],
    "source": [
-    "def get_job_args(task, bound='germain', alpha=0.1, sigma=[3,2], epsilon=[0.01], binary=False, n_classifiers=4):\n",
-    " \n",
-    "    if binary:\n",
-    "        with open('posteriors/'+\"task\"+str(task)+\"/Binary/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+'/params.txt', 'rb+') as f:\n",
-    "            params=f.readlines()\n",
-    "        f.close()\n",
-    "        prior_path=\"priors/\"+\"task\"+str(task)+\"/Binary/\"+str(int(100*alpha))+\"/prior.ckpt\"\n",
-    "        result_path=\"results/\"+\"task\"+str(task)+\"/Binary/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"_\"\n",
-    "    else:\n",
-    "        with open('posteriors/'+\"task\"+str(task)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+'/params.txt', 'rb+') as f:\n",
-    "            params=f.readlines()\n",
-    "        f.close()\n",
-    "        prior_path=\"priors/\"+\"task\"+str(task)+\"/\"+str(int(100*alpha))+\"/prior.ckpt\"\n",
-    "        result_path=\"results/\"+\"task\"+str(task)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"_\"\n",
-    "\n",
-    "    #epsilon=float(params[1]) # @TODO: Superfluous? Isn't this submitted?\n",
-    "    #epochs_trained=int(params[2]) # @TODO: Unused as far as I can see\n",
-    "     \n",
-    "    posterior_paths = posterior_checkpoints(task, epsilon, alpha, binary=binary)\n",
-    "    \n",
-    "    arg_list = []\n",
-    "    for post in posterior_paths: \n",
-    "        args = {\n",
-    "            'task': task, \n",
-    "            'prior_path': prior_path, \n",
-    "            'posterior_path': post,\n",
-    "            'bound': bound, \n",
-    "            'alpha': alpha,\n",
-    "            'sigma': sigma, \n",
-    "            'epsilon': epsilon, \n",
-    "            'binary': binary,\n",
-    "            'n_classifiers': n_classifiers\n",
-    "        }\n",
-    "        arg_list.append(args)\n",
-    "        \n",
-    "    return arg_list\n",
-    "    \n",
-    "def posterior_checkpoints(task, epsilon, alpha, binary=False):\n",
-    "    ### Here we do something more intelligent to not have to hardcode the epoch amounts. \n",
-    "    ### we parse the filenames and sort them in numerical order and then load the weights\n",
-    "    if binary:\n",
-    "        base_path=\"posteriors/\"+\"task\"+str(task)+\"/Binary/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))\n",
-    "    else:\n",
-    "        base_path=\"posteriors/\"+\"task\"+str(task)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))\n",
-    "        \n",
-    "    list1=[]\n",
-    "    list2=[]\n",
-    "    dirFiles = os.listdir(base_path) #list of directory files\n",
-    "    ## remove the ckpt.index and sort so that we get the epochs that are in the directory\n",
-    "    for files in dirFiles: #filter out all non jpgs\n",
-    "        if '.ckpt.index' in files:\n",
-    "            name = re.sub('\\.ckpt.index$', '', files)\n",
-    "            ### if it has a one it goes in one list and if it starts with a two it goes in the other\n",
-    "            if (name[0]==\"1\"):\n",
-    "                list1.append(name)\n",
-    "            elif (name[0]==\"2\"):\n",
-    "                list2.append(name)\n",
-    "                \n",
-    "    list1.sort(key=lambda f: int(re.sub('\\D', '', f)))\n",
-    "    num_batchweights=len(list1)\n",
-    "    list2.sort(key=lambda f: int(re.sub('\\D', '', f)))\n",
-    "    list1.extend(list2)\n",
-    "    Ws=list1\n",
-    "        \n",
-    "    path=\"posteriors/\"+\"task\"+str(TASK)+\"/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"/\"#\"{epoch:0d}.ckpt\"\n",
-    "    if Binary:\n",
-    "        path=\"posteriors/\"+\"task\"+str(TASK)+\"/Binary/\"+str(int(1000*epsilon))+\"_\"+str(int(100*alpha))+\"/\"#\"{epoch:0d}.ckpt\"\n",
-    "    \n",
-    "    posterior_paths = [os.path.join(path, str(checkpoint)+\".ckpt\") for checkpoint in Ws]\n",
-    "    \n",
-    "    return posterior_paths"
+    "!cat $job"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -196,52 +211,143 @@
       "alpha:0.1\n",
       "  epsilon:0.01\n",
       "    sigma:[3, 2]\n",
-      "\n",
-      "----------------------------------------\n",
-      "Computing bound components for\n",
-      "   Prior: priors/task2/Binary/10/prior.ckpt\n",
-      "   Posterior: posteriors/task2/Binary/10_10/1_0.ckpt\n",
-      "Clearing session...\n",
-      "Initializing models...\n",
-      "Loading weights...\n",
-      "Drawing classifiers...\n",
-      "Time spent drawing the classifiers: 0.0200s\n",
-      "Calculating errors...\n",
-      "Time spent calculating errors: 28.3190s\n",
-      "Computing joint errors and disagreements...\n"
+      "['sbatch: error: Unable to open file binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt']\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-0b9b45ba6862>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m                 \u001b[0mjobid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m                 \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfid\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'-%s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mjobid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt'"
      ]
     }
    ],
    "source": [
-    "y_target_bin = make_mnist_binary(y_target)\n",
-    "y_source_bin = make_mnist_binary(y_source)\n",
-    "\n",
     "print('Iterating over experiments...\\n')\n",
+    "\n",
+    "fids = []\n",
+    "\n",
+    "os.makedirs('logs', exist_ok=True)\n",
+    "\n",
     "\n",
     "np.random.seed(seed)\n",
     "for alpha in alphas:\n",
     "    \n",
     "    print(\"alpha:\"+str(alpha))\n",
     "    \n",
-    "    if alpha==0:\n",
-    "        x_bound=x_source\n",
-    "        y_bound=y_source_bin\n",
-    "    else:\n",
-    "        x_bound, x_prior, y_bound, y_prior = train_test_split(x_source, y_source_bin, test_size=alpha)\n",
     "    for epsilon in epsilons:\n",
     "        print(\"  epsilon:\"+str(epsilon))\n",
-    "        for sigma in sigmas:    # @TODO: This loop can be merged into the compute_bound part since models don't depend on sigma\n",
+    "        for sigma in sigmas:    \n",
     "            print(\"    sigma:\"+str(sigma))\n",
-    "            arg_list = get_job_args(TASK, bound='germain', alpha=alpha, sigma=sigma,\n",
+    "            arg_list = get_job_args(task, bound=bound, alpha=alpha, sigma=sigma,\n",
     "                                    epsilon=epsilon, binary=binary, n_classifiers=n_classifiers)\n",
-    "            # @TODO: Test\n",
-    "            a = arg_list[0]            \n",
-    "            compute_bound_parts(a['task'], a['posterior_path'], x_bound, y_bound, x_target, y_target_bin, \n",
-    "                          prior_path=a['prior_path'], bound=a['bound'], binary=a['binary'], sigma=a['sigma'], \n",
-    "                          epsilon=0.01, n_classifiers=a['n_classifiers'])\n",
+    "            for a in arg_list[:5]:   \n",
+    "                \n",
+    "                ckpt = os.path.splitext(os.path.basename(a['posterior_path']))[0]\n",
+    "                fid = './logs/batch_t-%d_r-%d_a-%.4f_s-%d%d_e-%.4f_d-%.4f_b-%d_n-%d_B-%s_c-%s' % \\\n",
+    "                    (task, seed, alpha, sigma[0], sigma[1], epsilon, delta, binary, n_classifiers, bound, ckpt)\n",
+    "                \n",
+    "                sigstr = '%d,%d' % (sigma[0], sigma[1])\n",
+    "                exp = 'task=%d,seed=%d,alpha=%.4f,sigma=\"%s\",epsilon=%.4f,delta=%.4f,\\\n",
+    "                        binary=%d,nclassifiers=%d,bound=%s,prior=%s,posterior=%s' % \\\n",
+    "                        (task, seed, alpha, sigstr, epsilon, delta, binary, n_classifiers, bound, a['prior_path'], a['posterior_path'])\n",
+    "                \n",
+    "                prior_path = a['prior_path']\n",
+    "                output = !sbatch -o \"$fid\"-%j.out -e \"$fid\"-%j.err -A $project --export=\"$exp\" $job\n",
+    "                print(output)\n",
+    "\n",
+    "                jobid = int(output[0].split(' ')[-1])\n",
+    "                fid = fid+'-%s' % jobid\n",
+    "\n",
+    "                fids.append(fid)\n",
+    "\n",
+    "                \n",
+    "                break\n",
+    "            break\n",
+    "        break\n",
+    "    break\n",
+    "\n",
+    "            #compute_bound_parts(a['task'], a['posterior_path'], x_bound, y_bound, x_target, y_target_bin, \n",
+    "                          #prior_path=a['prior_path'], bound=a['bound'], binary=a['binary'], sigma=a['sigma'], \n",
+    "                          #epsilon=0.01, n_classifiers=a['n_classifiers'])\n",
     "            \n",
     "               "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103526']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
+      "            103526     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103465     alvis     bash  frejohk  R    3:13:25      1 alvis1-08 \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!squeue -u $username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103526\n",
+      "This job can be monitored from: https://scruffy.c3se.chalmers.se/d/alvis-job/alvis-job?var-jobid=103526&from=1632830346000\n",
+      "\n",
+      "0\n",
+      "\n",
+      " \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fid in fids: \n",
+    "    print(fid)\n",
+    "    !tail -n 5 \"$fid\".out\n",
+    "    !tail -n 5 \"$fid\".err\n",
+    "    print(' \\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
