added batch computation scripts

--- a/batch_compute_bound.ipynb
+++ b/batch_compute_bound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "['3', ',', '3']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,8 @@
      "output_type": "stream",
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
-      "            103465     alvis     bash  frejohk  R    2:53:08      1 alvis1-08 \r\n"
+      "            103554     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103465     alvis     bash  frejohk  R    3:25:15      1 alvis1-08 \r\n"
      ]
     }
    ],
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +138,7 @@
       "#!/usr/bin/bash\r\n",
       "\r\n",
       "#SBATCH -t 1-00:00:00\r\n",
-      "#SBATCH -N 1 --gpus-per-node=V100:1\r\n",
+      "#SBATCH -N 1 --gpus-per-node=T4:1\r\n",
       "#SBATCH -p alvis \r\n",
       "\r\n",
       "if [ -z \"$task\" ]\r\n",
@@ -187,7 +188,9 @@
       "\r\n",
       ". load_modules.sh\r\n",
       "\r\n",
-      "python batch_bound_single.py -t $task -r $seed -a $alpha -s $sigma -e $epsilon -d $delta -b $binary -n $nclassifiers -B $bound -p $prior -P $posterior"
+      "echo $sigma\r\n",
+      "\r\n",
+      "#python batch_bound_single.py -t $task -r $seed -a $alpha -s $sigma -e $epsilon -d $delta -b $binary -n $nclassifiers -B $bound -p $prior -P $posterior"
      ]
     }
    ],
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 130,
    "metadata": {
     "scrolled": false
    },
@@ -211,18 +214,7 @@
       "alpha:0.1\n",
       "  epsilon:0.01\n",
       "    sigma:[3, 2]\n",
-      "['sbatch: error: Unable to open file binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt']\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-0b9b45ba6862>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m                 \u001b[0mjobid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m                 \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfid\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'-%s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mjobid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt'"
+      "['Submitted batch job 103579']\n"
      ]
     }
    ],
@@ -251,7 +243,7 @@
     "                fid = './logs/batch_t-%d_r-%d_a-%.4f_s-%d%d_e-%.4f_d-%.4f_b-%d_n-%d_B-%s_c-%s' % \\\n",
     "                    (task, seed, alpha, sigma[0], sigma[1], epsilon, delta, binary, n_classifiers, bound, ckpt)\n",
     "                \n",
-    "                sigstr = '%d,%d' % (sigma[0], sigma[1])\n",
+    "                sigstr = '\"%d.%d\"' % (sigma[0], sigma[1])\n",
     "                exp = 'task=%d,seed=%d,alpha=%.4f,sigma=\"%s\",epsilon=%.4f,delta=%.4f,\\\n",
     "                        binary=%d,nclassifiers=%d,bound=%s,prior=%s,posterior=%s' % \\\n",
     "                        (task, seed, alpha, sigstr, epsilon, delta, binary, n_classifiers, bound, a['prior_path'], a['posterior_path'])\n",
@@ -280,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103526']\n"
+      "['./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103579']\n"
      ]
     }
    ],
@@ -297,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -305,8 +297,9 @@
      "output_type": "stream",
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
-      "            103526     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
-      "            103465     alvis     bash  frejohk  R    3:13:25      1 alvis1-08 \r\n"
+      "            103554     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103579     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103465     alvis     bash  frejohk  R    3:27:52      1 alvis1-08 \r\n"
      ]
     }
    ],
@@ -316,18 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103526\n",
-      "This job can be monitored from: https://scruffy.c3se.chalmers.se/d/alvis-job/alvis-job?var-jobid=103526&from=1632830346000\n",
-      "\n",
-      "0\n",
-      "\n",
+      "./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103579\n",
+      "This job can be monitored from: https://scruffy.c3se.chalmers.se/d/alvis-job/alvis-job?var-jobid=103579&from=1632831217000\n",
+      "3.2\n",
+      "2021-09-28 14:13:40.060852: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
       " \n",
       "\n",
       "\n"
@@ -337,8 +329,8 @@
    "source": [
     "for fid in fids: \n",
     "    print(fid)\n",
-    "    !tail -n 5 \"$fid\".out\n",
-    "    !tail -n 5 \"$fid\".err\n",
+    "    !tail -n 20 \"$fid\".out\n",
+    "    !tail -n 20 \"$fid\".err\n",
     "    print(' \\n\\n')"
    ]
   },
