added batch scripts

--- a/batch_compute_bound.ipynb
+++ b/batch_compute_bound.ipynb
@@ -70,26 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['3', ',', '3']"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list('3,3')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -200,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 144,
    "metadata": {
     "scrolled": false
    },
@@ -214,7 +194,8 @@
       "alpha:0.1\n",
       "  epsilon:0.01\n",
       "    sigma:[3, 2]\n",
-      "['Submitted batch job 103579']\n"
+      "task=2,seed=69105,alpha=0.1000,sigma=\"\"3.2\"\",epsilon=0.0100,delta=0.0500,binary=1,nclassifiers=2,bound=germain,prior=priors/task2/Binary/10/prior.ckpt,posterior=posteriors/task2/Binary/10_10/1_0.ckpt\n",
+      "['Submitted batch job 103602']\n"
      ]
     }
    ],
@@ -244,10 +225,10 @@
     "                    (task, seed, alpha, sigma[0], sigma[1], epsilon, delta, binary, n_classifiers, bound, ckpt)\n",
     "                \n",
     "                sigstr = '\"%d.%d\"' % (sigma[0], sigma[1])\n",
-    "                exp = 'task=%d,seed=%d,alpha=%.4f,sigma=\"%s\",epsilon=%.4f,delta=%.4f,\\\n",
-    "                        binary=%d,nclassifiers=%d,bound=%s,prior=%s,posterior=%s' % \\\n",
-    "                        (task, seed, alpha, sigstr, epsilon, delta, binary, n_classifiers, bound, a['prior_path'], a['posterior_path'])\n",
+    "                exp = 'task=%d,seed=%d,alpha=%.4f,sigma=\"%s\",epsilon=%.4f,delta=%.4f,'% (task, seed, alpha, sigstr, epsilon, delta)\\\n",
+    "                        +'binary=%d,nclassifiers=%d,bound=%s,prior=%s,posterior=%s' % (binary, n_classifiers, bound, a['prior_path'], a['posterior_path'])\n",
     "                \n",
+    "                print(exp)\n",
     "                prior_path = a['prior_path']\n",
     "                output = !sbatch -o \"$fid\"-%j.out -e \"$fid\"-%j.err -A $project --export=\"$exp\" $job\n",
     "                print(output)\n",
@@ -272,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103579']\n"
+      "['./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103602']\n"
      ]
     }
    ],
@@ -289,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +279,8 @@
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
       "            103554     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
-      "            103579     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
-      "            103465     alvis     bash  frejohk  R    3:27:52      1 alvis1-08 \r\n"
+      "            103602     alvis batch_bo  frejohk  R       0:43      1 alvis2-02 \r\n",
+      "            103465     alvis     bash  frejohk  R    3:33:16      1 alvis1-08 \r\n"
      ]
     }
    ],
@@ -309,17 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
+   "execution_count": 179,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103579\n",
-      "This job can be monitored from: https://scruffy.c3se.chalmers.se/d/alvis-job/alvis-job?var-jobid=103579&from=1632831217000\n",
-      "3.2\n",
-      "2021-09-28 14:13:40.060852: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
+      "./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-2_B-germain_c-1_0-103602\n",
+      "This job can be monitored from: https://scruffy.c3se.chalmers.se/d/alvis-job/alvis-job?var-jobid=103602&from=1632831487000\n",
+      "2021-09-28 14:18:10.691068: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
       " \n",
       "\n",
       "\n"
@@ -329,8 +311,8 @@
    "source": [
     "for fid in fids: \n",
     "    print(fid)\n",
-    "    !tail -n 20 \"$fid\".out\n",
-    "    !tail -n 20 \"$fid\".err\n",
+    "    !cat \"$fid\".out\n",
+    "    !cat \"$fid\".err\n",
     "    print(' \\n\\n')"
    ]
   },
